fixed overlay issue, added pitch info as post

--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
 ---
 layout: about
 title: About
+banner:
+  image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
+  height: "25vh"
 ---
 
 <h2>About</h2>
