--- a/resources.html
+++ b/resources.html
@@ -2,9 +2,12 @@
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-layout: home
+layout: about
 title: Resources
 #banner: "/assets/images/banners/home.jpeg"
+banner:
+  image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
+  height: "25vh"
 ---
 
 {% include resources.html %}
