added sponsors and charlie

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
-layout: about
+layout: articles
 title: About
+sidebar: sponsor_sidebar.html
 banner:
   image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
   height: "25vh"
