--- a/resources.html
+++ b/resources.html
@@ -2,8 +2,9 @@
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-layout: about
+layout: articles
 title: Resources
+sidebar: sponsor_sidebar.html
 #banner: "/assets/images/banners/home.jpeg"
 banner:
   image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
