added teams horizontal

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ title: Home
 #banner: "/assets/images/banners/home.jpeg"
 ---
 
+{% include teams_horz.html %}
 
 {% include views/pagination.html %}
