modified header banner style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ title: Home
 #banner: "/assets/images/banners/home.jpeg"
 ---
 
-{% include teams_horz.html %}
+{% include about.html %}
+
+<hr>
+
+<h2>Sessions</h2>
 
 {% include views/pagination.html %}
