--- a/organizers.html
+++ b/organizers.html
@@ -2,6 +2,9 @@
 layout: articles
 title: Organizers
 sidebar: sponsor_sidebar
+banner:
+  image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
+  height: "25vh"
 ---
 
 <h2>Organizers</h2>
